[package]
name = "agnostic-process"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = []

tokio = ["dep:tokio", "dep:tokio-util"]
smol = ["dep:smol", "async-process"]
async-std = ["dep:async-std", "async-process"]


[dependencies]
futures-io = { version = "0.3", default-features = false }
paste = "1"

async-process = { version = "2", optional = true }
tokio = { workspace = true, default-features = false, optional = true, features = ["process"] }
tokio-util = { workspace = true, default-features = false, optional = true, features = ["compat"] }
smol = { workspace = true, default-features = false, optional = true }
async-std = { workspace = true, default-features = false, optional = true, features = ["unstable"] }
