[package]
name = "agnostic-process"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["asynchronous"]
description = "An async runtime agnostic version `std::process`."

[features]
default = []

tokio = ["dep:tokio", "agnostic-io/tokio"]
smol = ["dep:smol", "async-process"]
async-std = ["dep:async-std", "async-process"]

[dependencies]
agnostic-io = { workspace = true, default-features = false }
futures-util.workspace = true
paste = "1"

async-process = { version = "2", optional = true }
tokio = { workspace = true, default-features = false, optional = true, features = ["process"] }
smol = { workspace = true, default-features = false, optional = true }
async-std = { workspace = true, default-features = false, optional = true, features = ["unstable"] }
