[package]
name = "feature-extension-for-wasm-bindgen-futures"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Feature extension for wasm-bindgen-futures"

[features]
default = []
time = ["futures-timer/wasm-bindgen"]

[dependencies]
futures-timer = { version = "3", optional = true }
wasm-bindgen-futures = "0.4"